[gd_scene load_steps=13 format=2]

[ext_resource path="res://characters/OverworldCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/OverworldPlayer.gd" type="Script" id=2]
[ext_resource path="res://characters/super_note.png" type="Texture" id=3]
[ext_resource path="res://characters/step1.wav" type="AudioStream" id=4]
[ext_resource path="res://characters/wood_block_strike.wav" type="AudioStream" id=5]
[ext_resource path="res://menu/unshaded.material" type="Material" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StepSmoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StepSmoke:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "percuss"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 28, 29 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("WoodBlock")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "percuss"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 25, 26, 27, 26 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Step")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("StepSmoke:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0.19802, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.252475, 1 ), 0.652392, 0.652392, 0, 0, Vector2( 1, 0 ), -2.2572, 0.0, 0, 0 ]

[node name="Player" groups=["player"] instance=ExtResource( 1 )]
script = ExtResource( 2 )
is_playable = true

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 3 )
hframes = 5
vframes = 10
region_enabled = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="Anim" type="AnimationPlayer" parent="." index="3"]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 1 )
anims/percuss = SubResource( 4 )
anims/walk = SubResource( 3 )

[node name="Step" type="AudioStreamPlayer2D" parent="." index="4"]
stream = ExtResource( 4 )
bus = "Sound effects"

[node name="WoodBlock" type="AudioStreamPlayer2D" parent="." index="5"]
stream = ExtResource( 5 )
volume_db = 10.0
bus = "Sound effects"

[node name="CutsceneBars" type="CanvasLayer" parent="." index="6"]

[node name="Top" type="ColorRect" parent="CutsceneBars" index="0"]
anchor_right = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Bottom" type="ColorRect" parent="CutsceneBars" index="1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="ClickArea" type="Area2D" parent="." index="7"]
position = Vector2( 0, -10 )
z_index = 1000
collision_layer = 32768
collision_mask = 0

[node name="Shape" type="CollisionShape2D" parent="ClickArea" index="0"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tutorial" type="Label" parent="." index="8"]
margin_left = -34.0
margin_top = -38.0
margin_right = 34.0
margin_bottom = -23.0
text = "Drag Super Note
to move!"
align = 1

[node name="StepSmoke" type="CPUParticles2D" parent="." index="9"]
show_behind_parent = true
material = ExtResource( 6 )
position = Vector2( 0, -2 )
z_index = 100
emitting = false
lifetime = 0.6
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
scale_amount = 4.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 6 )

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
